--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
 
 
   
-       <section class="hero-section" data-scroll-section>
+       <!-- <section class="hero-section" data-scroll-section>
         <h1 class="md-text">SUPERARE</h1>
   
         <div class="hero-section__hero-container">
@@ -320,7 +320,7 @@
         </div>
   
   
-      </footer>
+      </footer> -->
   
 
     </div>
