--- a/src/index.html
+++ b/src/index.html
@@ -298,7 +298,7 @@
 
   
     <script src="./ts/main.ts" type="module"></script>
-    <!-- <script src="./js/locomotive-scroll.min.js"></script>
+    <script src="./js/locomotive-scroll.min.js"></script>
 
 
     <script>
@@ -333,7 +333,7 @@
 ScrollTrigger.refresh();
   
 
-</script>     -->
+</script>    
 
   </body>
 </html>
