scroll Trigger problem

--- a/src/index.html
+++ b/src/index.html
@@ -334,7 +334,7 @@
     </div>
 
   
-    <script src="./ts/main.ts" type="module"></script>
+    <script src="./js/index.js" type="module"></script>
 
 
   </body>
