--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+  
     <meta charset="UTF-8" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./android-chrome-192x192.png">
+     <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Superare NFT</title>
+    <meta name="title" content="Superare NFTs" />
+    <meta
+			name="description"
+			content="UI/UX designer"
+		/>
+<!-- Facebook Meta Tags -->
+    <meta property="og:type" content="website" />
+		<meta property="og:title" content="Superare NFTs " />
+		<meta property="og:url" content="https://siyanbade.vercel.app/" />
+		<meta
+			property="og:description"
+			content="Discover and collect super rare NFTs"
+		/>
+
+    <title>Superare NFTs</title>
+
     <link rel="stylesheet" href="scss/index.scss" />
+
+
   </head>
 
   <body>
