--- a/src/index.html
+++ b/src/index.html
@@ -10,16 +10,38 @@
     <meta name="title" content="Superare NFTs" />
     <meta
 			name="description"
-			content="UI/UX designer"
+			content="Discover and collect super rare NFTs"
 		/>
 <!-- Facebook Meta Tags -->
     <meta property="og:type" content="website" />
 		<meta property="og:title" content="Superare NFTs " />
-		<meta property="og:url" content="https://siyanbade.vercel.app/" />
+		<meta property="og:url" content="https://superare-nft-page.vercel.app/" />
 		<meta
 			property="og:description"
 			content="Discover and collect super rare NFTs"
 		/>
+
+    {/* Twitter Meta Tags */}
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://superare-nft-page.vercel.app/" />
+    <meta
+      name="twitter:title"
+      content="Discover and collect super rare NFTs"
+    />
+    <meta
+      name="twitter:description"
+      content="Discover and collect super rare NFTs"
+    />
+    <meta
+      name="twitter:image"
+      content="https://contextdata.ai/images/Clone6.png"
+    />
+    <meta
+      name="twitter:image:alt"
+      content="Super NFT avatar'"
+    />
+
+
 
     <title>Superare NFTs</title>
 
